--- a/main/system/etc/gps.conf
+++ b/main/system/etc/gps.conf
@@ -1,15 +1,30 @@
-NTP_SERVER=0.es.pool.ntp.org
-NTP_SERVER=1.es.pool.ntp.org
-NTP_SERVER=2.es.pool.ntp.org
-NTP_SERVER=3.es.pool.ntp.org
+XTRA_SERVER_1=http://derekgordon.com/gps-files/bin/xtra.bin
+QOS_TIME_OUT_STANDALONE=80
+XTRA_SERVER_3=http://xtra2.gpsonextra.net/xtra.bin
+XTRA_SERVER_2=http://xtra3.gpsonextra.net/xtra.bin
+DEFAULT_AGPS_ENABLE=TRUE
+QosHorizontalThreshold=1000
+#SUPL_TLS_CERT=/etc/SuplRootCert
+QOS_TIME_OUT_AGPS=95
+#SUPL_TLS_HOST=FQDN
+AGPS=http://derekgordon.com/gps-files/bin/xtra.bin
+PHONE_TYPE=UMTS
+REPORT_POSITION_USE_SUPL_REFLOC=1
 NTP_SERVER=es.pool.ntp.org
-NTP_SERVER=0.europe.pool.ntp.org
-NTP_SERVER=1.europe.pool.ntp.org
-NTP_SERVER=2.europe.pool.ntp.org
-NTP_SERVER=3.europe.pool.ntp.org
-NTP_SERVER=europe.pool.ntp.org
-XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra.bin
-XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra.bin
-XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra.bin
-SUPL_HOST=supl.google.com
+INTERMEDIATE_POS=1
+AgpsMtConf=0
+#SUPL_SECURE_PORT=7275
+QOS_ACCURACY=50
+QosVerticalThreshold=500
+AgpsMtResponseType=1
+AssistMethodType=1
+DEFAULT_USER_PLANE=TRUE
+AgpsServerType=1
+DEFAULT_SSL_ENABLE=FALSE
+CURRENT_CARRIER=common
+SUPL_NO_SECURE_PORT=3425
+AgpsServerIp=3232235555
+ACCURACY_THRES=3000
+AgpsUse=1
 SUPL_PORT=7276
+SUPL_HOST=supl.google.com
